--- a/Module 1/Ex6.html
+++ b/Module 1/Ex6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body style = "font-size: 30px; font-family: Arial">
+<body style = "font-size: 30px; font-family: Arial,serif">
 <script src="Ex%206.js"> </script>
 </body>
 </html>
